edit push-cf.yml file

--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -5,9 +5,9 @@ on: workflow_dispatch
 # Environment variables available to all jobs and steps in this workflow
 env:
   IBM_CLOUD_REGION: us-south
-  IBM_CLOUD_GROUP: default
-  IBM_CLOUD_SPACE: dev
-  IBM_CLOUD_ORG:
+  IBM_CLOUD_GROUP: Default #This name is capital sensitive
+  IBM_CLOUD_SPACE: djangoserver-space01
+  IBM_CLOUD_ORG: cmcuna@gmail.com
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.IBM_CLOUD_API_KEY}}
 
@@ -42,5 +42,5 @@ jobs:
         run: ibmcloud cf apps
         shell: bash
       - name: Deploy manifest file
-        run: ibmcloud cf push -f ./$MANIFEST_NAME
+        run: ibmcloud cf push -f ./$MANIFEST_NAME #this is giving error bc 'server' folder not pushed to git (redo'ing)
         shell: bash
